2009-01-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.5 ========================
	* 

2008-11-26  Andreas Kupries  <andreask@activestate.com>

	* canvas_zoom.man: Fixed syntax error in manpage I forgot to
	  validate.

2008-11-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ../../examples/canvas/osm_zoom.tcl: Removed zoom control and
	* ../../examples/canvas/tiles_xy_store_http.tcl: tile fetching.
	* ../../examples/canvas/osm.tcl: The former is now canvas::zoom,
	  the latter has been replaced by the map::slippy::* packages in
	  Tcllib. Updated the OSM example application to use these
	  packages now. Reordered its innards a bit as well.

	* canvas_zoom.tcl: Converted the zoom control in the canvas example
	* canvas_zoom.man: into a regular widget, and fixed a problem with
	* pkgIndex.tcl: viewport calculations (div-by-zero) in sqmap.
	* canvas_sqmap.tcl: Bumped version the of sqmap to 0.2
	* canvas_sqmap.man:

2008-11-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* canvas_sqmap.tcl (Reconfigure): Streamline internal operations a
	  bit ... I.e. no redraw before the viewport is stabilized, and
	  done only if not already done through the viewport move. Further
	  no irrelevant redraw request when forced through undefined
	  pixelview. At last, do never drop free items. As we configure
	  them to show no image even those not immediately reused are
	  effectively invisible and stay around until needed. This reduces
	  item destroy/create churn rate when we are forcing a full reload.

2008-11-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* canvas_sqmap.tcl: Removed guards from tilecache invokations in
	  the image methods. Could have prevented insertion of new image
	  into the cache, keeping an old image and making cache
	  inconsistent with the display. This needs cache::async 0.3 to
	  prevent a blow-up in the recursive call to the cache due to